[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rnn-spice-proxy"
version = "0.1.0"
description = "Применение рекуррентных нейронных сетей для моделирования нелинейных характеристик электронных компонентов"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
PySimpleGUI = "4.65.0"
torch = "2.1.0"
onnx = "1.14.1"
matplotlib = "3.8.0"
numpy = "1.24.3"
scikit-learn = "1.3.0"
tqdm = "4.65.0"
PySpice = "1.5"
numba = "0.57.1"
pyyaml = "6.0.1"
colorama = "0.4.6"
tensorboard = "2.14.0"
typing-extensions = "4.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
mypy = "1.4.1"
pylint = "2.17.5"
black = "23.7.0"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 